--- a/src/pug/includes/modules/content/massage-results/face.pug
+++ b/src/pug/includes/modules/content/massage-results/face.pug
@@ -68,7 +68,7 @@ mixin face-slide(number)
           .face-results__description.face-results__description_one
             | Взгляд “распахивается” после первой же процедуры
           .face-results__description.face-results__description_two
-            | Такие морщинки сложны в коррекции, но за курс мы убрали их почти полностью
+            | Такие морщинки сложны в коррекции, но за курс они уходят почти полностью
           .face-results__description.face-results__description_three
             | Носогубки и так были в неплохом состоянии, но теперь совсем не видны
           .face-results__description.face-results__description_four
