--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -16,21 +16,7 @@ block variables
       mainScreenHeading: 'Антицеллюлитный массаж',
       mainScreenSubheading: `Избавляет от&nbsp;целлюлита, разглаживает кожу. Подтягивает ягодицы, уменьшает «ушки»
         и&nbsp;бока`,
-      mainScreenFeatures: [
-        {
-          bigText: `${globalData.company.businessDuration} лет`,
-          smallText: `специализируемся<br>на массаже. <a class='link link_primary underline' href='about.html'>О нас</a>`
-        },
-        {
-          bigText: '10 лет',
-          smallText: `минимальный стаж специалистов,<br>у всех мед. образование`
-        },
-        {
-          bigText: '800',
-          smallText: `честных <a class='link link_primary underline' href='reviews.html'>отзывов</a><br>с
-            ${globalData.company.foundationYear} по ${globalData.currentYear}`
-        }
-      ],
+      mainScreenFeatures: globalData.company.features,
       aboutMassage: [
         {
           title: 'Какой будет эффект? Целлюлит пропадёт полностью?',
@@ -44,7 +30,7 @@ block variables
           title: 'Это очень больно? Будут синяки?',
           text: [
             'Мы нашли способ сохранить мощный эффект и уменьшить чувствитель&shy;ность процедуры. Почти все наши клиенты, которые делали антицел&shy;люлитный массаж в других центрах, говорили, что ощущали сильную боль, но наша процедура была гораздо приятнее ожидаемого&nbsp;:)',
-            'Однако техника воздействия довольно глубокая, массажист тщательно и активно прорабатывает ткани, разминает жировые отложения, и местами может быть слегка чувстви&shy;тельно. Но не больно, обещаем.',
+            'Однако техника воздействия довольно глубокая, массажист тщательно и активно прорабатывает ткани, разминает жировые отложения, и местами может быть слегка чувстви&shy;тельно.',
             'Синяки появляются очень редко, только в случае слабых сосудов. Даже если они появятся, то будут незначительными и пройдут уже к следующему сеансу. '
           ]
         },
@@ -59,7 +45,7 @@ block variables
       massageResults: {
         title: 'Результаты антицеллюлитного массажа',
         figure: {
-          slidesOrder: [1, 2, 9, 10, 11, 12, 3, 4, 5, 6, 7, 8]
+          slidesOrder: [1, 9, 10, 11, 12, 3, 4, 5, 6, 7, 8]
         }
       },
       reviewsBlock: {
