--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -13,7 +13,7 @@ block variables
       pageClass: 'figure-modeling-page',
       theme: '7',
       massage: globalData.massages['figure-modeling'],
-      mainScreenHeading: 'Ручное моделирование фигуры',
+      mainScreenHeading: 'Ручное моделирование фигуры (липоскульптура)',
       mainScreenSubheading: `Авторская техника для&nbsp;похудения и&nbsp;подтягивания кожи. Уходит лишний вес, тают
         объёмы`,
       mainScreenFeatures: [
@@ -51,14 +51,14 @@ block variables
           title: 'Как проходит процедура? Какие будут ощущения?',
           text: [
             'Процедура состоит из трёх этапов — разгона лимфы, антицеллюлит&shy;ного массажа и обёртывания. Мы делаем обёртывание на все проблемные зоны: руки, бёдра, живот, ягодицы.',
-            'Первая часть массажа расслабляющая и приятная, вторая может быть слегка чувствительной из-за глубокого воз- действия. Но вам точно не будет больно. Мастер очень тщательно и глубоко проработает ваши ткани, разомнёт жировые отложения, выведет лишнюю межклеточную жидкость. Синяки бывают очень редко, только если у вас слабые сосуды. Даже если они появятся, то будут очень маленькие и пройдут быстро.'
+            'Первая часть массажа расслабляющая и приятная, вторая может быть слегка чувствительной из-за глубокого воздействия. Мастер очень тщательно и глубоко проработает ваши ткани, разомнёт жировые отложения, выведет лишнюю межклеточную жидкость. Синяки бывают очень редко, только если у вас слабые сосуды. Даже если они появятся, то будут очень маленькие и пройдут быстро.'
           ]
         }
       ],
       massageResults: {
         title: 'Результаты ручного моделирования',
         figure: {
-          slidesOrder: [2, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+          slidesOrder: [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
         }
       },
       reviewsBlock: {
