--- a/src/pug/pages/prices.pug
+++ b/src/pug/pages/prices.pug
@@ -14,15 +14,15 @@ block variables
       promotions: {
         1: globalData.mainPromo,
         2: {
-          title: '25% скидка на скульптурно-буккальный массаж!',
-          text: 'Любое количество сеансов. Только на июль и август',
+          title: '30% скидка на скульптурно-буккальный массаж!',
+          text: 'Любое количество сеансов. Только на январь и февраль',
           buttonText: 'Записаться',
           buttonColor: '#06319f',
           image: 'assets/img/prices-page/promo-bg-1@2x.jpg'
         },
         3: {
-          title: '25% скидка на ручное модели&shy;рование фигуры',
-          text: 'На первый сеанс',
+          title: '30% скидка на ручное модели&shy;рование фигуры',
+          text: 'На январь и февраль',
           buttonText: 'Записаться',
           buttonColor: '#fe2c78',
           image: 'assets/img/prices-page/promo-bg-2@2x.jpg'
