--- a/src/assets/scss/blocks/results/figure-results.scss
+++ b/src/assets/scss/blocks/results/figure-results.scss
@@ -266,6 +266,18 @@
           }
         }
       }
+
+      &_12 {
+        .massage-results__single-image {
+          margin-left: 6%;
+        }
+
+        img {
+          height: 35rem;
+          max-width: initial;
+          width: auto;
+        }
+      }
     }
 
     &__slide:not(.figure-results__slide_1):not(.figure-results__slide_2) {
@@ -358,6 +370,12 @@
     }
 
     &__slide {
+      &_1 {
+        .massage-results__link {
+          top: 10rem;
+        }
+      }
+
       &_2 {
         .massage-results {
           &__before,
@@ -386,6 +404,12 @@
               }
             }
           }
+        }
+      }
+
+      &_12 {
+        img {
+          height: 37rem;
         }
       }
     }
