--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -14,21 +14,7 @@ block variables
       massage: globalData.massages['back-massage'],
       mainScreenHeading: `Лечебный массаж спины`,
       mainScreenSubheading: `<br class='hidden_mobile-tablet'>Быстрое избавление от&nbsp;боли. Лечение заболеваний позвоночника, мышц и&nbsp;суставов по&nbsp;уникальной методике без&nbsp;операций`,
-      mainScreenFeatures: [
-        {
-          bigText: `${globalData.company.businessDuration} лет`,
-          smallText: `специализируемся<br>на массаже. <a class='link link_primary underline' href='about.html'>О нас</a>`
-        },
-        {
-          bigText: '10 лет',
-          smallText: `минимальный стаж специалистов,<br>у всех мед. образование`
-        },
-        {
-          bigText: '800',
-          smallText: `честных <a class='link link_primary underline' href='reviews.html'>отзывов</a><br>с
-            ${globalData.company.foundationYear} по ${globalData.currentYear}`
-        }
-      ],
+      mainScreenFeatures: globalData.company.features,
       aboutMassage: [
         {
           title: 'Что это за процедура?',
@@ -199,7 +185,7 @@ block variables
           question: `Я не верю, что массаж может помочь. Зажимы и боль в мышцах это одно дело. Но как он лечит грыжи, сколиоз и прочие заболевания?`,
           answer: `Важно отличать лечебный массаж от классического и прочих видов массажа. Лечебный массаж — это официальный медицинский метод, признанный врачебным сообществом именно для излечения болезней позвоночника.<br>
             <br>
-            Сеанс лечебного массажа нужно сравнивать с приёмом врача в больнице, а не с походом в массажный салон. А курс заменяет полноценное лечение позвоночника, а во многих случаях и операцию. При этом массаж не травматичен, так как избавляет от проблемы естественным путём.<br>
+            Сеанс лечебного массажа нужно сравнивать с приёмом врача в больнице, а не с походом в массажный салон. А курс заменяет лечение позвоночника, а в некоторых случаях и операцию. При этом массаж не травматичен, так как избавляет от проблемы естественным путём.<br>
             <br>
             Лечебный массаж спины способен эффективно справиться с большинством заболеваний позвоночника, сложными зажимами, воспалениями. После 50 минут активной и глубокой работы с тканями, улучшается кровообращение, происходит насыщение всех тканей и клеток полезными веществами, усиливается регенерация костной и хрящевой ткани.<br>
             <br>
