--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -16,21 +16,7 @@ block variables
       mainScreenHeading: 'Спортивный массаж',
       mainScreenSubheading: `Снятие боли в&nbsp;мышцах, ускоренное восстановление, улучшение результатов. Возвращение
         в&nbsp;спорт после травм`,
-      mainScreenFeatures: [
-        {
-          bigText: `${globalData.company.businessDuration} лет`,
-          smallText: `специализируемся<br>на массаже. <a class='link link_primary underline' href='about.html'>О нас</a>`
-        },
-        {
-          bigText: '10 лет',
-          smallText: `минимальный стаж специалистов,<br>у всех мед. образование`
-        },
-        {
-          bigText: '800',
-          smallText: `честных <a class='link link_primary underline' href='reviews.html'>отзывов</a><br>с
-            ${globalData.company.foundationYear} по ${globalData.currentYear}`
-        }
-      ],
+      mainScreenFeatures: globalData.company.features,
       aboutMassage: [
         {
           title: 'Что это за процедура?',
