12 steps navigation and desktop styles

--- a/src/assets/scss/blocks/article-page/article-navigation.scss
+++ b/src/assets/scss/blocks/article-page/article-navigation.scss
@@ -6,30 +6,29 @@
 
     max-width: 28rem;
     margin-bottom: 5rem;
+
+    font-size: 1.4rem;
   }
 
   ul.article-navigation__list {
     padding-left: 0;
   }
 
-  &__list-item {
+  &__link {
     position: relative;
 
+    display: inline-block;
+    width: 100%;
     padding: 0.9rem 0.2rem;
 
-    font-size: 1.4rem;
+    vertical-align: middle;
 
-    cursor: pointer;
-
-    a {
-      &,
-      &:hover {
-        color: $default-color;
-      }
+    &,
+    &:hover {
+      color: $default-color;
     }
 
-    &::before,
-    &::after {
+    &::before {
       @include box(100%);
 
       content: '';
@@ -38,32 +37,15 @@
       left: 0;
       z-index: -1;
 
+      background-color: map-deep-get($themes, 'main', 'background-dark');
       opacity: 0;
 
       transition: opacity 0.4s;
     }
 
-    &::before {
-      background-color: map-deep-get($themes, 'main', 'background-dark');
-    }
-
-    &::after {
-      background-color: map-deep-get($themes, 'main', 'primary-transparent');
-    }
-
     &:hover,
-    &[data-state=active] {
+    &[data-active] {
       &::before {
-        opacity: 1;
-      }
-    }
-
-    &:focus {
-      &::before {
-        opacity: 0;
-      }
-
-      &::after {
         opacity: 1;
       }
     }
@@ -71,5 +53,48 @@
 
   li.article-navigation__list-item {
     margin-bottom: 0;
+  }
+}
+
+@media (min-width: $tablet-min-width) {
+  .article-navigation {
+    &__list {
+      max-width: 32rem;
+    }
+  }
+}
+
+@media (min-width: $s-desktop-min-width) {
+  .article-navigation {
+    position: fixed;
+    top: 10rem;
+    bottom: 0;
+    left: calc(50vw - 48rem);
+
+    min-width: 28rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    ul {
+      margin-bottom: 0;
+    }
+
+    &[data-state=absolute] {
+      position: absolute;
+      top: auto;
+      right: calc(100% + 1rem);
+      bottom: 0;
+      left: auto;
+    }
+  }
+}
+
+@media (min-width: $desktop-min-width) {
+  .article-navigation {
+    left: calc(50vw - 52rem);
+
+    &[data-state=absolute] {
+      right: calc(100% + 6rem);
+    }
   }
 }
