--- a/src/assets/scss/blocks/page/article-page.scss
+++ b/src/assets/scss/blocks/page/article-page.scss
@@ -18,6 +18,8 @@
 
   &__wrap {
     padding: 5rem 2.75rem;
+    padding-bottom: 0;
+    margin-bottom: 5rem;
 
     p {
       margin-bottom: 2rem;
@@ -58,14 +60,6 @@
         margin-bottom: 1.5rem;
       }
     }
-
-    .picture {
-      margin: 4rem 0;
-
-      img {
-        width: 100%;
-      }
-    }
   }
 
   &__tags {
@@ -94,6 +88,14 @@
     text-align: left;
     font-size: 2.8rem;
     line-height: 1.2;
+  }
+
+  &__image {
+    margin: 4rem 0;
+
+    img {
+      width: 100%;
+    }
   }
 
   &__highlight {
@@ -129,8 +131,9 @@
 
   &__video {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
+
     height: 0;
+    padding-bottom: 56.25%; /* 16:9 */
 
     + .article-page__video {
       margin-top: 2.5rem;
@@ -146,19 +149,81 @@
 @media (min-width: $phone-landscape-min-width) {
   .article-page {
     &__wrap {
-      @include centered-block(48rem);
+      @include centered-block(49rem);
+    }
+  }
+}
+
+@media (min-width: $tablet-min-width) {
+  .article-page {
+    &__article-title {
+      font-size: 4rem;
+    }
+
+    &__wrap {
+      max-width: 70rem;
+      margin-bottom: 7rem;
+      padding-right: 4rem;
+      padding-left: 4rem;
+
+      h2 {
+        font-size: 3rem;
+      }
+    }
+
+    &__abstract {
+      font-size: 2.2rem;
+    }
+
+    &__image {
+      &_right,
+      &_left {
+        width: 50%;
+        margin-top: 0;
+        margin-bottom: 1.5rem;
+      }
+
+      &_right {
+        float: right;
+        margin-left: 2.5rem;
+      }
+
+      &_left {
+        float: left;
+        margin-right: 2.5rem;
+      }
+
+      &_small {
+        width: 30%;
+      }
+    }
+
+    &__highlight {
+      padding: 3rem 4.5rem;
+
+      b {
+        font-size: 1.6rem;
+      }
+    }
+
+    &__video {
+      + .article-page__video {
+        margin-top: 4rem;
+      }
     }
   }
 }
 
 @media (min-width: $s-desktop-min-width) {
   .article-page {
-    .page__content {
-      padding-top: 7rem;
-    }
-
     .page__header {
       position: fixed;
+    }
+
+    .page__content {
+      @include centered-block(105rem);
+
+      padding-top: 7rem;
     }
 
     .page-header {
@@ -175,6 +240,24 @@
       &__logo-link {
         display: block;
       }
+    }
+
+    &__wrap {
+      position: relative;
+
+      margin-right: 0;
+      margin-bottom: 10rem;
+      margin-left: 32rem;
+    }
+  }
+}
+
+@media (min-width: $desktop-min-width) {
+  .article-page {
+    &__wrap {
+      margin-left: 35rem;
+      padding-right: 0;
+      padding-left: 0;
     }
   }
 }
