--- a/src/pug/includes/modules/content/article-page/navigation.pug
+++ b/src/pug/includes/modules/content/article-page/navigation.pug
@@ -1,5 +1,5 @@
-nav.article-page__navigation.article-navigation
+nav.article-page__navigation.article-navigation(data-state='fixed')
   ul.article-navigation__list
     each anchor, id in locals.data.pageData.article.navigation
-      li.article-navigation__list-item(data-state=(id === '1' ? 'active' : false))
-        a(href=`#nav-${id}`)= anchor
+      li.article-navigation__list-item
+        a.article-navigation__link(href=`#nav-${id}` data-active=(id === '1' ? '' : false))= anchor
